website/tests/snapshots/types/opaque-types.exp
=== block 1 ===
No errors!

=== block 2 ===
Error ------------------------------------------------------------------------ -:11:21

Cannot assign `"abc"` to `c` because string [1] is incompatible with `OpaqueID` [2]. [incompatible-type]

   -:11:21
   11| const c: OpaqueID = "abc"; // Error — outside the defining file, string is not an OpaqueID
                           ^^^^^ [1]

References:
   -:11:10
   11| const c: OpaqueID = "abc"; // Error — outside the defining file, string is not an OpaqueID
                ^^^^^^^^ [2]

Error ------------------------------------------------------------------------ -:12:19

Cannot assign `oid` to `d` because `OpaqueID` [1] is incompatible with string [2]. [incompatible-type]

   -:12:19
   12| const d: string = oid; // Error — outside the defining file, OpaqueID is not a string
                         ^^^

References:
   -:10:12
   10| const oid: OpaqueID = makeOpaqueID("abc"); // Works — the only way to obtain an OpaqueID
                  ^^^^^^^^ [1]
   -:12:10
   12| const d: string = oid; // Error — outside the defining file, OpaqueID is not a string
                ^^^^^^ [2]


Found 2 errors

=== block 3 ===
No errors!

=== block 4 ===
No errors!

=== block 5 ===
Error -------------------------------------------------------------------------- -:5:1

Cannot cast `0` to `NumberAlias` because number [1] is incompatible with `NumberAlias` [2]. [incompatible-type]

   -:5:1
   5| 0 as NumberAlias; // Error: 0 is not a NumberAlias!
      ^ [1]

References:
   -:5:6
   5| 0 as NumberAlias; // Error: 0 is not a NumberAlias!
           ^^^^^^^^^^^ [2]

Error ------------------------------------------------------------------------- -:8:10

Cannot return `x` because `NumberAlias` [1] is incompatible with number [2]. [incompatible-type]

   -:8:10
   8|   return x; // Error: x is not a number!
               ^

References:
   -:7:21
   7| function convert(x: NumberAlias): number {
                          ^^^^^^^^^^^ [1]
   -:7:35
   7| function convert(x: NumberAlias): number {
                                        ^^^^^^ [2]


Found 2 errors

=== block 6 ===
No errors!

=== block 7 ===
Error ------------------------------------------------------------------------ -:10:12

Cannot return `x` because string [1] is incompatible with `ID` [2]. [incompatible-type]

   -:10:12
   10|     return x; // Error: strings are not IDs.
                  ^

References:
   -:9:18
    9| function toID(x: string): ID {
                        ^^^^^^ [1]
   -:9:27
    9| function toID(x: string): ID {
                                 ^^ [2]


Found 1 error

=== block 8 ===
Error ------------------------------------------------------------------------- -:2:27

number [1] is incompatible with string [2]. [incompatible-type]

   -:2:27
   2| opaque type Bad: string = number; // Error: number is not a subtype of string
                                ^^^^^^ [1]

References:
   -:2:18
   2| opaque type Bad: string = number; // Error: number is not a subtype of string
                       ^^^^^^ [2]


Found 1 error

=== block 9 ===
No errors!

=== block 10 ===
No errors!
